# id-claude-plugin-mono

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  release.sh
.claude-plugin/: marketplace.json
.security/: README.md  baseline.json  scan.py
config/: README.md  insidedesk.example.json  scj.example.json
plugins/coding-quality/: .gitignore  CLAUDE.md  README.md
plugins/coding-quality/.claude-plugin/: plugin.json
plugins/coding-quality/checklists/: new-project.md  pre-commit.md  pre-pr.md
plugins/coding-quality/docs/: changelog.md  workflow-skill-conversions.md
plugins/coding-quality/resources/: references.md  tools.md
plugins/coding-quality/resources/templates/: .gitignore  .pre-commit-config.yaml  pyproject.toml
plugins/coding-quality/rules/: 00-conventions.md  01-clean-code.md  02-git.md  03-security.md  04-error-handling.md  05-testing.md  06-documentation.md  07-agent-instructions.md
plugins/coding-quality/stacks/: aws-environment.md  aws-lambda.md  gitlab-ci.md  python-aws.md  python.md  terraform-aws.md  web-frontend.md
plugins/id-claude-integrations/: .gitignore  CLAUDE.md  README.md  SECURITY_REVIEW.md
plugins/id-claude-integrations/.claude-plugin/: plugin.json
plugins/id-claude-integrations/docs/: changelog.md  future-skills-analysis.md
plugins/id-claude-ops/: .gitignore  CLAUDE.md  README.md  SECURITY_REVIEW.md
plugins/id-claude-ops/.claude-plugin/: plugin.json
plugins/id-claude-ops/docs/: changelog.md  facility-entry-skill-spec.md
plugins/id-claude-reporting/: .gitignore  CLAUDE.md  README.md  SECURITY_REVIEW.md  build_ascend_report.py
plugins/id-claude-reporting/.claude-plugin/: plugin.json
plugins/id-claude-reporting/docs/: changelog.md
plugins/id-claude-shared/: CLAUDE.md  README.md  SECURITY_REVIEW.md
plugins/id-claude-shared/.claude-plugin/: plugin.json
plugins/id-claude-shared/docs/: changelog.md
plugins/opentofu-secure/: CLAUDE.md  README.md
plugins/opentofu-secure/.claude-plugin/: plugin.json
(+198 files in other folders)
