# pyproject.toml — canonical project config
# Author:       Sean Johnson <sean@scj.net>
# Purpose:      Baseline pyproject.toml for Python projects (py312, uv+hatchling)
# Last updated: 2026-05-30
# Version:      1.0.0
#
# Usage: copy to your project root, fill in <placeholders>, run `uv sync`.

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "<project-name>"
version     = "0.1.0"
description = "<One-line description>"
authors     = [{ name = "Sean Johnson", email = "sean@scj.net" }]
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.12"

# Runtime dependencies — pin major versions, let uv.lock handle the rest
dependencies = [
    # e.g. "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3,secretsmanager,ssm]>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "black>=24.0",
    "detect-secrets>=1.5",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/W = pycodestyle + pyflakes  I = isort  UP = pyupgrade (enforces modern typing)
# B = flake8-bugbear  C4 = flake8-comprehensions  PIE = flake8-pie
# RET = flake8-return  SIM = flake8-simplify
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RET", "SIM"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py312"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -v"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]          # adjust to your package root

[tool.coverage.report]
fail_under   = 90
show_missing = true
